faster dfa regex